# purira_client

./: .$architecture.drawio.bkp  .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
src/routes/: +page.svelte
static/: config.example.json
